# stackablectl

./: .gitignore  CHANGELOG.md  Cargo.nix  Cargo.toml  README.md  UPGRADE.md  bors.toml  build.rs  crate-hashes.json  demos.yaml  deny.toml  go.mod  go.sum  gomod2nix.toml  release-23.4.yaml  releases.yaml  stacks.yaml
.github/: pull_request_template.md
.github/workflows/: build.yml  pr_cockpit.yml  pr_general.yml  pr_stackablectl.yml  release.yml  release_stackablectl.yml
demos/: demos-v1.yaml  demos-v2.yaml
demos/airflow-cron-dag/: enable-and-run-dag.yaml
demos/airflow-scheduled-job/: 01-airflow-spark-clusterrole.yaml  03-enable-and-run-spark-dag.yaml  04-enable-and-run-date-dag.yaml  enable-and-run-dag.yaml
demos/airflow-spark-k8s-pi/: 01-airflow-spark-clusterrole.yaml  03-enable-and-run-dag.yaml
demos/anomaly-detection/: pom.xml
demos/data-lakehouse-iceberg-trino-spark/: Dockerfile  Forecast.ipynb  LakehouseKafkaIngest.xml  create-nifi-ingestion-job.yaml  create-spark-ingestion-job.yaml  create-trino-tables.yaml  load-test-data.yaml  serviceaccount.yaml  setup-superset.yaml
demos/data-warehouse-iceberg-trino-spark/: Dockerfile  IngestWaterLevelsToKafkaFast.xml  WarehouseKafkaIngest.xml  create-nifi-ingestion-job.yaml  create-spark-ingestion-job.yaml  create-trino-tables.yaml  load-test-data.yaml  setup-superset.yaml
demos/hbase-hdfs-load-cycling-data/: 01-distcp-cycling-data.yaml  02-create-hfile-and-import-to-hbase.yaml  03-prepare-minio.yaml  03-setup-minio.yaml  03-spark-access-hbase-data.yaml  04-spark-access-hbase-data.yaml  create-hfile-and-import-to-hbase.yaml  distcp-cycling-data.yaml
demos/hbase-hdfs-phoenix-trino-gdpr/: 00-python.yaml  01-load-data-to-s3.yaml  01-minio.yaml  02-create-hbase-row-key.yaml  02-distcp-retail-data.yaml  02-load-events-for-hbase.yaml  03-convert-to-parquet.yaml  03-create-hbase-row-key.yaml  03-load-events-to-hdfs.yaml  04-create-hfile-and-import-to-hbase.yaml  04-load-events-to-hdfs.yaml  05-create-hfile-and-import-to-hbase.yaml  05-create-phoenix-table.yaml  05-trino-hbase-connection.yaml  06-create-phoenix-table.yaml  06-trino-hbase-connection.yaml  07-trino-hbase-connection.yaml
demos/hbase-spark-k8s/: 00-deploy-hbase-edge.yaml  00-hdfs-upload-job.yaml  01-create-hfile-import-to-hbase.yaml  01-hdfs-upload-job.yaml  02-spark-k8s-deps-volume.yaml  03-trigger-hbase-load-job.yaml  04-load-spark-jar-from-nexus-s3.yaml  05-deploy-hbase-spark-demo.yaml  csv-file-hbaseRowKeyGenerator.py  deploy-hbase-spark-demo.yaml  deploy-hdfs-hbase-load.yaml  hbase-importTsv.sh  hbase-prep.yaml  pom.xml  row-key_losses_ukraine.csv  spark-k8s-deps-volume.yaml  spark-k8s.yaml  trigger-hbase-load-job.yaml  xxx-01-hdfs-upload-job.yaml
demos/jupyterhub-hdfs/: load-test-data.yaml
demos/jupyterhub-pyspark-hdfs-anomaly-detection-taxi-data/: Dockerfile  load-test-data.yaml  requirements.txt
demos/kafka-druid-earthquake-data/: create-druid-ingestion-job.yaml  download_earthquake_data.sh  ingest-test-data.yaml  setup-superset.yaml
demos/kafka-druid-water-level-data/: create-druid-ingestion-job.yaml  ingest-test-data.yaml  queries.txt  setup-superset.yaml
demos/logging/: zookeeper.yaml
demos/nifi-kafka-druid-earthquake-data/: IngestEarthquakesToKafka.xml  create-druid-ingestion-job.yaml  create-nifi-ingestion-job.yaml  setup-superset.yaml
demos/nifi-kafka-druid-water-level-data/: IngestWaterLevelsToKafka.xml  create-druid-ingestion-job.yaml  create-nifi-ingestion-job.yaml  setup-superset.yaml
demos/s3-hdfs-hbase/: 00-hdfs-upload-job.yaml  01-create-hfile-import-to-hbase.yaml  01-hdfs-upload-job.yaml
demos/signal-processing/: Dockerfile-jupyter  Dockerfile-nifi  DownloadAndWriteToDB.xml  requirements.txt  (+3 more)
docs/: antora.yml
go-helm-wrapper/: build.sh  go.mod  go.sum  main.go
nix/: sources.json
releases/: releases.yaml
src/: arguments.rs  demo.rs  helm.rs  helpers.rs  ionos.rs  kind.rs  kube.rs  main.rs  operator.rs  release.rs  services.rs  stack.rs  templating.rs  tooling.rs
stacks/: stacks-v1.yaml  stacks-v2.yaml  trino-superset.yaml  trino.yaml
(+262 files in other folders)
