[package]
name = "stackablectl"
description = "Command line tool to interact with a Stackable Data Platform"
authors = ["Stackable GmbH <info@stackable.de>"]
version = "0.2.0"
edition = "2021"
license = "OSL-3.0"
repository = "https://github.com/stackabletech/stackablectl"

[dependencies]
cached = "0.37"
clap = { version = "3.2", features = ["derive", "cargo"] }
clap_complete = "3.2"
env_logger = "0.9"
indexmap = { version = "1.9", features = ["serde"] }
k8s-openapi = { version = "0.15.0", default-features = false, features = ["v1_24"] }
kube = "0.73.1" # Using openssl (and not native-tls) as kube-rs team tries to move away from native-tls
lazy_static = "1.4"
log = "0.4"
openssl = { version = "0.10.36", features = ["vendored"] } # Must match version from kube
which = "4.2"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.8"
reqwest = "0.11" # Using native-tls as openssl does not seem to be supported as of 0.11
tokio = "1.19.2"

[profile.release]
# strip = true # By default on Linux and macOS, symbol information is included in the compiled .elf file.
lto = true # Enable Link Time Optimization to reduce binary size

[build-dependencies]
gobuild = "0.1.0-alpha.2"
