[package]
name = "stackablectl"
description = "Command line tool to interact with a Stackable Data Platform"
authors = ["Stackable GmbH <info@stackable.tech>"]
version = "0.8.0"
edition = "2021"
license = "OSL-3.0"
repository = "https://github.com/stackabletech/stackablectl"

[dependencies]
bcrypt = "0.14"
cached = { version = "0.42", features = ['async_tokio_rt_multi_thread'] }
clap = { version = "4.1", features = ["derive", "cargo"] }
clap_complete = "4.4"
comfy-table = "6.1"
env_logger = "0.10"
indexmap = { version = "1.9", features = ["serde"] }
k8s-openapi = { version = "0.17", default-features = false, features = ["v1_26"] }
kube = { version = "0.78", default-features = false, features = ["client", "openssl-tls"]} # Using openssl (and not native-tls) as kube-rs team tries to move away from native-tls
lazy_static = "1.4"
log = "0.4"
openssl = { version = "0.10.45", features = ["vendored"] } # Must match version from kube
passwords = { version = "3.1", features = ["crypto"] }
which = "4.4"
semver = "1.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = "0.11" # Using native-tls as openssl does not seem to be supported as of 0.11
tera = "1.17"
tokio = "1.25"

[profile.release]
# strip = true # By default on Linux and macOS, symbol information is included in the compiled .elf file.
lto = true # Enable Link Time Optimization to reduce binary size

[build-dependencies]
gobuild = "0.1.0-alpha.2"
